--- a/Assignment04/Pages/Index.razor
+++ b/Assignment04/Pages/Index.razor
@@ -1,5 +1,10 @@
 ﻿@page "/"
 
+<div class="d-flex align-center justify-center">
+    <MECharts Option="_option">
+    </MECharts>
+</div>
+
 <MCard Dark
        Flat>
     <MButton Absolute
@@ -96,3 +101,34 @@
         </MTimelineItem>
     </MTimeline>
 </MCardText>
+
+        @code{
+    private object _option = new
+    {
+        Title = new
+        {
+            Left = "center",
+            Text = "ECharts 入门示例"
+        },
+        Tooltip = new { },
+        Legend = new
+        {
+            Right="20px",
+            Data = new[] { "销量" }
+        },
+        XAxis = new
+        {
+            Data = new[] { "衬衫", "羊毛衫", "雪纺衫", "裤子", "高跟鞋", "袜子" }
+        },
+        YAxis = new { },
+        Series = new[]
+        {
+            new 
+            {
+                Name= "销量",
+                Type= "bar",
+                Data= new []{ 5, 20, 36, 10, 10, 20 }
+            }
+        }
+    };
+}
